k8s/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    kubernetes.io/ingress.class: alb
  name: dashboard
  namespace: staging
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: 8080
        path: "/*"
